--- a/src/app/Secretaire/detail-patient/detail-patient.component.html
+++ b/src/app/Secretaire/detail-patient/detail-patient.component.html
@@ -24,7 +24,8 @@
                                     <ul class="nav navbar-right panel_toolbox">
                                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                                         </li>
-                                        <li><a (click)="editPatient(patient?.id)" title="edit">
+                                        <li *ngIf="user.role=='secretaire'"><a (click)="editPatient(patient?.id)"
+                                                title="edit">
                                                 <i class="fa fa-pencil"></i></a>
                                         </li>
                                         <li><a class="close-link"><i class="fa fa-close"></i></a>
